Set fixed height to select tags component
Fixes #1968. Even thought the `<select>` is invisible when using
TomSelect, it is still rendered and has some height. Setting a height
similar to the text input allows the "required" tooltip of the
`<select>` to be rendered nearer to the text input.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1039,6 +1039,7 @@ div#domain_box input[type=text] {
 }
 div#story_box #story_tags {
 	width: 624px;
+	height: 2rem;
 }
 div#story_box textarea {
 	width: 600px;
